# git-add-co-author

./: .gitignore  README.md  pyproject.toml
git_add_co_author/: __main__.py
