[tool.poetry]
name = "git-add-co-author"
version = "0.3.0"
description = ""
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]
readme = "README.md"
packages = [{include = "git_add_co_author"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
